<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LinkAccount">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <include
                android:id="@+id/include"
                layout="@layout/header" />

            <TextView
                android:id="@+id/tvLinked"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/addAcount"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:padding="32dp"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userId"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:ems="10"
                app:errorEnabled="true"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/ic_profile"
                app:startIconTint="@color/logo">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/l_identifient"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:id="@+id/buttons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_gravity="center"
                >
                <Button
                    android:id="@+id/btnAdd"
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/ajouter"
                    tools:ignore="InvalidId"
                    android:layout_marginRight="16dp"
                    android:layout_marginEnd="16dp" />
                <Button
                    android:id="@+id/btnBack"
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Annuler"
                    tools:ignore="InvalidId"
                    android:layout_marginRight="16dp"
                    android:layout_marginEnd="16dp"
                    android:visibility="gone"/>

            </LinearLayout>



        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>